--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.7",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "5.3",
     "bootstrap-icons": "^1.10.5",
     "cors": "^2.8.5",
+    "jquery": "^3.7.1",
     "material-icons": "^1.13.6",
     "mdb-ui-kit": "^6.3.0",
     "ngx-loading": "^2.0.1",
     "ngx-permissions": "^15.0.1",
     "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.5",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
